--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,9 @@ import "../styles/globals.css";
 		<title>Astro</title>
 	</head>
 	<body>
-		<div class="text-3xl flex flex-col items-center justify-center">
+		<div
+			class="text-3xl flex flex-col items-center justify-center min-h-screen"
+		>
 			geeta-mini in astro
 		</div>
 	</body>
