--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import "../styles/globals.css";
 	</head>
 	<body>
 		<div
-			class="text-3xl flex flex-col items-center justify-center min-h-screen"
+			class="text-3xl flex flex-col items-center justify-center min-h-screen text-center"
 		>
 			geeta-mini in astro
 		</div>
