--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,31 +2,30 @@
 import { getCollection } from "astro:content";
 import "../styles/globals.css";
 const chapters = await getCollection("chapters");
+import { ClientRouter } from "astro:transitions";
+import BaseHead from "../base/BaseHead.astro";
+
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
-		<meta name="viewport" content="width=device-width" />
+<BaseHead>
+	
+			<div
+				class="header text-3xl flex flex-col items-center justify-center text-center"
+			>
+				geeta-mini in astro
+			</div>
+			<div class="main m-2 gap-2">
+				{
+					chapters.map((chapter) => (
+						<a 
+						
+						transition:name={`chapter-name-${chapter.id}`}
+						href={`/${chapter.id}`} class="">
+							{chapter.data.name}
+						</a>
+						<br/>
+					))
+				}
+			</div>
 
-		<title>geetaMini</title>
-	</head>
-	<body>
-		<div
-			class="header text-3xl flex flex-col items-center justify-center text-center"
-		>
-			geeta-mini in astro
-		</div>
-		<div class="main m-2 gap-2">
-			{
-				chapters.map((chapter) => (
-					<a href={`/${chapter.id}`} class="">
-						{chapter.data.name}
-					</a>
-					<br/>
-				))
-			}
-		</div>
-	</body>
-</html>
+</BaseHead>
