--- a/src/pages/[chapter].astro
+++ b/src/pages/[chapter].astro
@@ -1,6 +1,7 @@
 ---
-import { getEntries } from "astro:content";
 import { getCollection } from "astro:content";
+import { ClientRouter } from "astro:transitions";
+import BaseHead from "../base/BaseHead.astro";
 
 export async function getStaticPaths() {
   const chapters = await getCollection("chapters");
@@ -18,30 +19,28 @@ const sloks = allSloks.filter(
   );
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Chapter {chapter.data.chapter_number}</h1>
-    <h2>{chapter.data.name}</h2>
-    <p><strong>Meaning (English):</strong> {chapter.data.meaning.en}</p>
-    <p><strong>Total verses:</strong> {chapter.data.verses_count}</p>
+<BaseHead>
+  
 
-
-
-   	<div class="main m-2 gap-2">
-			{
-				sloks.map((slok) => (
-					<a href={`/${slok.data.chapter}/${slok.data.verse}`} class="">
+  <h2 transition:name={`chapter-name-${chapter.id}`}>{chapter.data.name}</h2>
+  <p><strong>Meaning (English):</strong> {chapter.data.meaning.en}</p>
+  <p><strong>Total verses:</strong> {chapter.data.verses_count}</p>
+  
+  
+  
+  <div class="main m-2 gap-2">
+    {
+      sloks.map((slok) => (
+        <a
+        
+        transition:name={`slok-name-${slok.id}`}
+        href={`/${slok.data.chapter}/${slok.data.verse}`} class="">
 						{slok.data.slok}
 					</a>
 					<br/>
 				))
 			}
 		</div>
-  </body>
-</html>
+    
+    
+  </BaseHead>
