--- a/src/base/BaseHead.astro
+++ b/src/base/BaseHead.astro
@@ -9,6 +9,8 @@ import "../styles/globals.css";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>geetaMini</title>
+    <link rel="sitemap" href="/sitemap-index.xml" />
+
     <ClientRouter />
   </head>
   <body>
