--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,10 @@ const sortedChapters = chapters.sort(
 );
 ---
 
-<BaseHead>
+<BaseHead
+  title="Bhagavad Gita - Complete Chapters with Slok, Meaning & Commentary | Geeta.Prasuco.com"
+  description={"Read the complete Bhagavad Gita online — all 18 chapters with original Sanskrit sloks, English and Nepali meanings, and chapter summaries. Experience the wisdom of Lord Krishna’s teachings in a simple, modern way."}
+>
   <div
     class="header text-3xl flex flex-col items-center justify-center text-center"
   >
