feat: major ui changes that are still non mature.

--- a/src/pages/[chapter].astro
+++ b/src/pages/[chapter].astro
@@ -1,6 +1,7 @@
 ---
 import { getCollection } from "astro:content";
 import BaseHead from "../base/BaseHead.astro";
+import MobileLayout from "../base/layouts/MobileLayout.astro";
 
 export async function getStaticPaths() {
   const chapters = await getCollection("chapters");
@@ -20,6 +21,9 @@ const sloks = allSloks.filter((s) => s.data.chapter === +Astro.params.chapter);
   description={`${chapter.data.summary.en.substring(0, 40)} |  Read all sloks of Chapter ${chapter.data.chapter_number} with meaning and explanation`}
   title={`Bhagavad Gita Chapter ${chapter.data.chapter_number} - ${chapter.data.meaning.en} | ${chapter.data.meaning.hi} | ${chapter.data.name}  | Full Sloks with Meaning`}
 >
+
+<MobileLayout >
+
   <h2 transition:name={`chapter-name-${chapter.id}`}>{chapter.data.name}</h2>
   <p><strong>Meaning (English):</strong> {chapter.data.meaning.en}</p>
   <p><strong>Total verses:</strong> {chapter.data.verses_count}</p>
@@ -37,11 +41,12 @@ const sloks = allSloks.filter((s) => s.data.chapter === +Astro.params.chapter);
           </a>
           <br />
           <p>
-            <s />
-            {slok.data.transliteration}
+
+
           </p>
         </Fragment>
       ))
     }
   </div>
+</MobileLayout>
 </BaseHead>
