--- a/src/pages/[chapter]/[slok].astro
+++ b/src/pages/[chapter]/[slok].astro
@@ -1,6 +1,7 @@
 ---
 import { getCollection } from "astro:content";
 import BaseHead from "../../base/BaseHead.astro";
+import MobileLayout from "../../base/layouts/MobileLayout.astro";
 export async function getStaticPaths() {
   const sloks = await getCollection("sloks");
 
@@ -20,13 +21,15 @@ const { slok } = Astro.props;
   description={`Read Bhagavad Gita ${slok.data.chapter}.${slok.data.verse} in Sanskrit with English meaning. Understand the verse's message and its spiritual significance as explained by Lord Krishna.`}
   title={`Bhagavad Gita ${slok.data.chapter}.${slok.data.verse} - Slokas with meaning`}
 >
-  <h2 transition:name={`slok-name-${slok.id}`}>
-    {slok.data.slok}
-  </h2>
-  <br />
-  <br />
-  {slok.data.raman.sc}
-  <br />
-  <br />
-  {slok.data.raman.et}
+  <MobileLayout>
+    <h2 transition:name={`slok-name-${slok.id}`}>
+      {slok.data.slok}
+    </h2>
+    <br />
+    <br />
+    {slok.data.raman.sc}
+    <br />
+    <br />
+    {slok.data.raman.et}
+  </MobileLayout>
 </BaseHead>
