--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import { getCollection } from "astro:content";
 const chapters = await getCollection("chapters");
 import BaseHead from "../base/BaseHead.astro";
 import MobileLayout from "../base/layouts/MobileLayout.astro";
+import ChapterItem from "../components/ChapterItem.astro";
 
 const sortedChapters = chapters.sort(
   (a, b) => a.data.chapter_number - b.data.chapter_number,
@@ -14,21 +15,8 @@ const sortedChapters = chapters.sort(
   description={"Read the complete Bhagavad Gita online — all 18 chapters with original Sanskrit sloks, English and Nepali meanings, and chapter summaries. Experience the wisdom of Lord Krishna’s teachings in a simple, modern way."}
 >
   <MobileLayout>
-    <div class="main m-2 gap-2">
-      {
-        sortedChapters.map((chapter) => (
-          <Fragment>
-            <a
-              transition:name={`chapter-name-${chapter.id}`}
-              href={`/${chapter.id}`}
-              class=""
-            >
-              {chapter.data.name}
-            </a>
-            <p>{chapter.data.meaning.en}</p>
-          </Fragment>
-        ))
-      }
+    <div class="main m-2 gap-2 flex flex-col">
+      {sortedChapters.map((chapter) => <ChapterItem data={chapter} />)}
     </div>
   </MobileLayout>
 </BaseHead>
