--- a/src/base/BaseHead.astro
+++ b/src/base/BaseHead.astro
@@ -6,7 +6,8 @@ type Props = {
   title: string;
   description?: string;
 };
-import "@fontsource/Inter";
+
+import "@fontsource-variable/inter";
 
 const {
   description = "Bhagavad Gita |  Complete Chapters with Slok, Meaning & Commentary | Geeta.Prasuco.com",
@@ -19,7 +20,7 @@ const {
   <head>
     <style>
       * {
-        font-family: "Inter", cursive;
+        font-family: "Inter Variable", sans-serif;
       }
     </style>
     <meta charset="UTF-8" />
