--- a/src/components/ChapterItem.astro
+++ b/src/components/ChapterItem.astro
@@ -12,7 +12,7 @@ const { data } = Astro.props;
   <a
     transition:name={`chapter-name-${data.id}`}
     href={`/${data.id}`}
-    class="hover:bg-amber-100/60 p-2 transition-all ease-in-out duration-300"
+    class="hover:bg-neutral-200/60 p-2 transition-all  duration-75 ease-linear"
   >
     <p class="text-xs italic">
       Chapter {data.data.chapter_number}
