--- a/src/components/ChapterItem.astro
+++ b/src/components/ChapterItem.astro
@@ -18,7 +18,7 @@ const { data } = Astro.props;
       Chapter {data.data.chapter_number}
     </p>
     <h2 class="font-[500]">
-      {data.data.meaning.en}
+      {data.data.name_meaning}
     </h2>
   </a>
 </Fragment>
