--- a/src/base/BaseHead.astro
+++ b/src/base/BaseHead.astro
@@ -30,6 +30,16 @@ const {
     <meta name="description" content={description} />
     <link rel="sitemap" href="/sitemap-index.xml" />
 
+    {
+      process.env.NODE_ENV === "production" && (
+        <script
+          defer
+          src="https://cloud.umami.is/script.js"
+          data-website-id="e13deb2e-6518-4468-9ac9-dc048737504e"
+        />
+      )
+    }
+
     <ClientRouter />
   </head>
   <body>
