--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import MobileLayout from "../base/layouts/MobileLayout.astro";
 import ChapterItem from "../components/ChapterItem.astro";
 
 const sortedChapters = chapters.sort(
-  (a, b) => a.data.chapter_number - b.data.chapter_number,
+  (a, b) => a.data.chapter_number - b.data.chapter_number
 );
 ---
 
