--- a/src/base/BaseHead.astro
+++ b/src/base/BaseHead.astro
@@ -31,6 +31,15 @@ const {
     <link rel="sitemap" href="/sitemap-index.xml" />
 
     {
+      !Astro.params.slok && (
+        <meta
+          property="og:image"
+          content={`/og/${Astro.params.chapter}.webp`}
+        />
+      )
+    }
+
+    {
       process.env.NODE_ENV === "production" && (
         <script
           defer
