fix: other things + nicer ui.

--- a/src/base/BaseHead.astro
+++ b/src/base/BaseHead.astro
@@ -7,7 +7,7 @@ type Props = {
   description?: string;
 };
 
-import "@fontsource-variable/inter";
+// import "@fontsource-variable/inter";
 
 const {
   description = "Bhagavad Gita |  Complete Chapters with Slok, Meaning & Commentary | Geeta.Prasuco.com",
